--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 <!--about section added-->
 <section class="aboutMe">
     <div style=" text-align: center; font-size: 20px;background-color:white; height:150px; width:25%; padding:2px">What about me ?</div>
-    <div style="width:75%; background-color:violet; float:right; height:151px">
+    <div style="width:75%; background-color:violet; float:right; height:151px; border-left: 5px black solid; padding-left: 3px;">
         
             <h2>About me</h2>
             <p>Here would go an esay on the Mighty Z Beast</p>
