--- a/index.html
+++ b/index.html
@@ -60,15 +60,7 @@
             width: 99.58%;
             /*margin: 5px 10px;*/
             background-color: white;
-        }
-        #d1 {
-            border: 3px green solid;
-            padding: 2px;
-            height: 150px;
-            width: 95%;
-            margin: 5px 10px;
-            background-color: teal;
-        }
+        }        
 
         a:hover {
           text-decoration-color: red;
@@ -94,36 +86,51 @@
                 font-size:36px;
                 text-align:center;
                 border-top: 3px green solid;
-                border-right: 3px green solid;
                 border-bottom: 3px green solid;
                 border-left:  0px;
-                padding: 2px;
+                padding: 5px;
+                padding-bottom: 0px;
                 height: 560px;
-                width: 98%;
+                width: 98.58%;
                 margin: 5px 30px 5px 10px;
-                background-color: orange;
+        }
+        #dd {
+            width:75.7%; 
+            background-color:white; 
+            float:right; 
+            height:555px; 
+            padding-left: 0px;
+        }
+        #d1 {
+            background-color:teal;
+            height: 150px;
         }
         .d2 {
-                font-weight:bold;
-                font-size:26px;
-                border: 2px green dashed;
-                height: 100px;
-                width: 40%;
-                margin: 5% 2% 0 3%;
-                text-align:center;
-                background-color:green;
+            font-weight:bold;
+            font-size:26px;
+            border: 2px green dashed;
+            border-radius: 5px;
+            height: 100px;
+            width: 40%;
+            margin: 5% 2% 0 3%;
+            padding-top:10px;
+            text-align:center;
+            background-color:green;
+            float:left;
         }
         .d3 {
                 font-weight:bold;
                 font-size:26px;
                 text-align: center;
                 margin: 5% 2% 0 3%;
-                padding: 2px;
+                padding-top: 10px;
                 border: 2px darkred solid;
+                border-radius: 5px;
                 height: 100px;
                 width: 40%;
                 margin-left: 8%;
                 background-color:darkred;
+                float:right;
         }
     </style>
 </head>
@@ -158,8 +165,10 @@
 
 <!--about section added-->
 <section class="aboutMe">
-    <div style=" text-align: center; font-size: 20px;background-color:white; height:150px; width:25%; padding:2px">What about me ?</div>
-    <div style="width:75%; background-color:violet; float:right; height:151px; border-left: 5px black solid; padding-left: 3px;">
+    <div style=" line-height: 150px; text-align: center;font-family:Verdana, Geneva, Tahoma, sans-serif; border-right: 5px black solid;font-size: 35px;background-color:white; height:150px; width:25%; padding:2px">
+        What about me ?
+    </div>
+    <div style="width:75%; background-color:violet; float:right; height:151px; padding-left: 10px;">
         
             <h2>About me</h2>
             <p>Here would go an esay on the Mighty Z Beast</p>
@@ -168,7 +177,11 @@
 </section>
 
 
-  <section style="display:flex; flex-wrap: wrap" class="work">
+  <section style="display:flex;" class="work">
+    <div style="line-height: 55px; border-right: 5px black solid; text-align: center;font-family:Verdana, Geneva, Tahoma, sans-serif; font-size: 30px;background-color:white; height:550px; width:24%; padding:2px">
+        there is a time to WORK and a time to play...now is time to WORK !!!
+    </div>
+    <div id="dd">
             <div id="d1" >
                 project #1 <br/>
                 MERN Stack
@@ -193,7 +206,8 @@
                 project #5 <br/>
                 HTML/CSS
             </div>
-
+    </div>
+        
     </section>
 
 
