making the tesxt more of a sight

--- a/index.html
+++ b/index.html
@@ -132,6 +132,12 @@
                 background-color:darkred;
                 float:right;
         }
+        h3 {
+            color:green;
+        }
+        .work p {
+            color:darkred;
+        }
     </style>
 </head>
 <body >
@@ -178,8 +184,8 @@
 
 
   <section style="display:flex;" class="work">
-    <div style="line-height: 55px; border-right: 5px black solid; text-align: center;font-family:Verdana, Geneva, Tahoma, sans-serif; font-size: 30px;background-color:white; height:550px; width:24%; padding:2px">
-        there is a time to WORK and a time to play...now is time to WORK !!!
+    <div style="line-height: 35px; border-right: 5px black solid; text-align: center;font-family:Verdana, Geneva, Tahoma, sans-serif; font-size: 30px;background-color:white; height:550px; width:24%; padding:2px">
+       <p>there is a time to</p><br/><h3> WORK </h3><br/><p>and a time to play...now is time to</p><br/><h3> WORK !!!</h3>
     </div>
     <div id="dd">
             <div id="d1" >
